[project]
name = "zito"
version = "0.1.0"
description = "ListingIQ: structured attribute extraction + relevance ranking for e-commerce listings"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "pandas>=2.2",
    "numpy>=1.26",
]

[project.optional-dependencies]
tracking = [
    "wandb>=0.17",
    "mlflow>=2.14",
]
ml = [
    "torch>=2.3",
    "transformers>=4.42",
    "peft>=0.11",
    "bitsandbytes>=0.43",
    "accelerate>=0.31",
    "datasets>=2.20",
]
retrieval = [
    "sentence-transformers>=3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.5",
    "pre-commit>=3.7",
    "pytest>=8.2",
    "ipykernel>=6.29",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["zito"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zito"]
